...
                android:text="Event Poster:"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/buttonUploadPoster"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:backgroundTint="@color/background_light"
                android:contentDescription="Upload event poster"
                app:srcCompat="@android:drawable/ic_menu_upload" />
...
                android:text="Event Name:"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/eventNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter event name"
                android:inputType="text"
                android:layout_marginBottom="8dp"
                android:textColor="@color/background_light"
...
                android:id="@+id/event_date_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="MM/DD/YYYY" />

            <Button
                android:id="@+id/eventDateSelectButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:backgroundTint="@color/background_light"
                android:text="Select Event Date"
                app:cornerRadius="8dp" />
...
                android:id="@+id/draw_date_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="MM/DD/YYYY" />

            <Button
                android:id="@+id/drawDateSelectButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:backgroundTint="@color/colorAccent"
                android:text="Select Draw Date"
                app:cornerRadius="8dp" />
...
                android:text="Sample Size:"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/sampleSizeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="Enter sample size"
                android:inputType="number"
                android:textColor="@color/background_light"
...
            </LinearLayout>

            <!-- Auto Replace -->

            <!-- Save Event Button -->
            <Button
                android:id="@+id/saveEventButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:backgroundTint="@color/notification_positive_background"
                android:text="Save Event"
                android:background="@drawable/search_view_bg"
...
