...
                android:text="Your Events"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ListView
                android:id="@+id/eventsListView"
                android:layout_width="match_parent"
                android:layout_height="408dp"
                android:layout_marginTop="8sp"
                android:layout_weight="1"
                android:background="#9eb3c2"
                android:cacheColorHint="#000000"
...
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:gravity="center">

                <Button
                    android:id="@+id/btn_go_to_facility"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:backgroundTint="@color/colorAccent"
                    android:text="Manage Facility"
                    android:background="@drawable/search_view_bg"
...
