<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="16dp"
        android:text="Create Facility"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="125dp"
        android:layout_height="122dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:paddingBottom="16dp"
        app:srcCompat="@drawable/ic_factory" />

    <EditText
        android:id="@+id/editTextFacilityName"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/search_view_bg"
        android:hint="  Enter facility name"
        android:textColor="#000000"
        android:textColorHint="#616161"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editTextFacilityDetails"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/search_view_bg"
        android:hint="  Enter facility information"
        android:paddingEnd="16dp"
        android:textColor="#000000"
        android:textColorHint="#616161"
        android:textSize="18sp" />

    <Button
        android:id="@+id/buttonCreateFacility"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:text="Create My Facility"
        app:cornerRadius="8dp" />

</LinearLayout>
