<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="16dp"
        android:text="Facility Details"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="match_parent"
        android:layout_height="122dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:paddingBottom="16dp"
        app:srcCompat="@drawable/ic_factory" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_facility_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="Facility Name:"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_facility_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="My Facility"
            android:textColor="@color/color_registration_open"
            android:textSize="24sp"
            android:textStyle="italic" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_facility_details_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-black"
            android:text="Details:"
            android:textAlignment="viewStart"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_facility_details"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="About my facility"
        android:textColor="@color/color_registration_open"
        android:textSize="18sp" />

    <Button
        android:id="@+id/edit_facility_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Edit ✏️"
        app:cornerRadius="8dp" />
</LinearLayout>