<?xml version="1.0" encoding="utf-8"?>
<!-- activity_invitations.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".activity.InvitationActivity">

    <!-- Header -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="center">

        <TextView
            android:id="@+id/tv_invitations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Invitations"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold" />


    </LinearLayout>

    <!-- ListView for notifications -->
    <ListView
        android:id="@+id/notifications_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#BBC3F2"
        android:scrollbars="vertical" />

</LinearLayout>
